tests/ui/typeck/constants/constant_unassigned.sol
// Uninitialized constant
uint constant x; //~ ERROR: constant variable must be initialized
